--- a/package.json
+++ b/package.json
@@ -13,11 +13,18 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "baseui": "^12.2.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "styletron-engine-atomic": "^1.5.0",
+    "styletron-react": "^6.1.0",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "eslint-plugin-baseui": "^12.2.0"
   }
 }
