--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "styletron-engine-atomic": "^1.5.0",
+    "styletron-engine-monolithic": "^1.0.0",
     "styletron-react": "^6.1.0",
     "typescript": "4.9.4"
   },
